Created sticky sidebar & altered structure on index page

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -44,6 +44,7 @@ Boilerplate version: 1.0
 @import "components/article.scss";
 @import "components/author.scss";
 @import "components/news.scss";
+@import "components/sidebar.scss";
 
 // ========================================================= //
 
