--- a/assets/css/dev/style.css
+++ b/assets/css/dev/style.css
@@ -296,6 +296,39 @@ figure {
   right: 0;
 }
 
+body {
+  width: 100%;
+}
+body:before, body:after {
+  content: "";
+  display: table;
+}
+body:after {
+  clear: both;
+}
+
+.wrap,
+.wrap__inner {
+  margin: 0 auto;
+}
+
+.wrap {
+  max-width: 120rem;
+}
+
+.wrap__inner {
+  max-width: 67rem;
+}
+
+.section-padding--tb {
+  padding-bottom: 4rem;
+  padding-top: 4rem;
+}
+
+.section-padding--lr {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
 img {
   border-radius: 0.4rem;
   max-width: 100%;
@@ -479,44 +512,6 @@ th {
   width: 3rem;
 }
 
-body {
-  width: 100%;
-}
-body:before, body:after {
-  content: "";
-  display: table;
-}
-body:after {
-  clear: both;
-}
-
-.wrap,
-.wrap--large,
-.wrap__inner {
-  margin: 0 auto;
-}
-
-.wrap {
-  max-width: 120rem;
-}
-
-.wrap--large {
-  max-width: 160rem;
-}
-
-.wrap__inner {
-  max-width: 67rem;
-}
-
-.section-padding--tb {
-  padding-bottom: 4rem;
-  padding-top: 4rem;
-}
-
-.section-padding--lr {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
 .page-header {
   background: #2d2d2d;
   position: relative;
@@ -525,6 +520,13 @@ body:after {
 .page-header__inner {
   padding-top: 1rem;
   position: relative;
+}
+.page-header__inner:before, .page-header__inner:after {
+  content: "";
+  display: table;
+}
+.page-header__inner:after {
+  clear: both;
 }
 
 .page-header .logo {
@@ -597,21 +599,6 @@ body:after {
   padding: 6rem 0;
 }
 
-.planner__list {
-  list-style: none;
-}
-
-.planner__item {
-  margin: 0;
-}
-.planner__item:before, .planner__item:after {
-  content: "";
-  display: table;
-}
-.planner__item:after {
-  clear: both;
-}
-
 .article__header {
   text-align: center;
 }
@@ -645,6 +632,20 @@ body:after {
 }
 .news__item--meta:last-child {
   padding-right: 0;
+}
+.planner__list {
+  list-style: none;
+}
+
+.planner__item {
+  margin: 0;
+}
+.planner__item:before, .planner__item:after {
+  content: "";
+  display: table;
+}
+.planner__item:after {
+  clear: both;
 }
 
 @media only screen and (min-width: 37.5em) {
@@ -757,6 +758,16 @@ body:after {
     font-size: 3.3rem;
   }
 
+  .section-padding--tb {
+    padding-bottom: 6rem;
+    padding-top: 6rem;
+  }
+
+  .section-padding--lr {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+
   .wrap__image {
     margin: 8rem 0;
   }
@@ -772,16 +783,6 @@ body:after {
     margin: 0 1.04167%;
   }
 
-  .section-padding--tb {
-    padding-bottom: 6rem;
-    padding-top: 6rem;
-  }
-
-  .section-padding--lr {
-    padding-left: 4rem;
-    padding-right: 4rem;
-  }
-
   .foo {
     color: #f00;
   }
@@ -792,11 +793,44 @@ body:after {
     padding-top: 8rem;
   }
 
+  .two-col .main-content {
+    display: inline;
+    float: left;
+    width: 64.58333%;
+    margin: 0 1.04167%;
+    margin-left: 0;
+  }
+  .two-col .side-content {
+    display: inline;
+    float: left;
+    width: 31.25%;
+    margin: 0 1.04167%;
+    float: right;
+    margin-right: 0;
+  }
+  .two-col .article__header,
+  .two-col .article__list {
+    text-align: left;
+  }
+
+  .side-content-detached .side-content__inner {
+    position: fixed;
+    top: 0;
+  }
+
   .foo {
     color: #f00;
   }
 }
 @media only screen and (min-width: 80em) {
+  .two-col .side-content {
+    display: inline;
+    float: left;
+    width: 22.91667%;
+    margin: 0 1.04167%;
+    margin-left: 9.375%;
+  }
+
   .foo {
     color: #f00;
   }
