--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -7,7 +7,7 @@
 .`-  /  `----' `---'`--'`--'`---'   `--'  `--'    `----' `----' 
 `---'                    
 
-Author: Rob Simpson
+Authors: Rob & Kev Simpson
 Boilerplate version: 1.0
 
 =========================================================== */
