Updated style.scss to modules instead of components

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -39,12 +39,12 @@ Boilerplate version: 1.0
 
 // ========================================================= //
 
-@import "components/nav.scss";
-@import "components/footer.scss";
-@import "components/article.scss";
-@import "components/author.scss";
-@import "components/news.scss";
-@import "components/sidebar.scss";
+@import "modules/nav.scss";
+@import "modules/footer.scss";
+@import "modules/article.scss";
+@import "modules/author.scss";
+@import "modules/news.scss";
+@import "modules/sidebar.scss";
 
 // ========================================================= //
 
