--- a/assets/sass/helpers/variables.scss
+++ b/assets/sass/helpers/variables.scss
@@ -37,6 +37,8 @@ $ter--alt: $yellow-2;
 //
 // ===========================================================
 
+$base-colour: 				$black;
+$border-colour:				$grey-1;
 $border-width: 				0.3rem;
 $border-radius: 			0.4rem;
 $border-radius--rounded:	4rem;
