--- a/assets/sass/base/images.scss
+++ b/assets/sass/base/images.scss
@@ -53,7 +53,7 @@ figcaption {
 @include respond-min( $mq-xx-large ) {
 
 	figcaption {
-		color: $figcaption-colour;
+		color: lighten($dark-2,20%);
 		line-height: 1.3;
 		padding: 0;
 		position: absolute;
