Module: push-nav Initial setup

--- a/assets/css/dev/style.css
+++ b/assets/css/dev/style.css
@@ -48,12 +48,10 @@ footer, header, hgroup, menu, nav, section {
 }
 
 .preload * {
-  -webkit-transition: none !important;
   transition: none !important;
 }
 
 * {
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   outline: none;
 }
@@ -125,14 +123,6 @@ em {
 ::-moz-selection {
   background: #57b275;
 }
-@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
-  p {
-    letter-spacing: 0.01em;
-    /* Increase letter-spacing on high pixel density screens as they can appear too close */
-    word-spacing: 0.01em;
-    /* Word-spacing same as letter-spacing for consistency */
-  }
-}
 .tera {
   font-size: 6.94614rem;
   font-weight: bold;
@@ -186,7 +176,6 @@ h5,
 }
 a {
   color: #57b275;
-  -webkit-transition: color 0.3s ease;
   transition: color 0.3s ease;
 }
 a:hover {
@@ -350,7 +339,6 @@ figcaption {
   display: inline-block;
   line-height: 1;
   padding: 2rem 3rem;
-  -webkit-transition: background 0.3s ease, border 0.3s ease, color 0.3s ease;
   transition: background 0.3s ease, border 0.3s ease, color 0.3s ease;
 }
 
@@ -374,16 +362,6 @@ figcaption {
   border-color: #f05d71;
   color: white;
 }
-
-@media only screen and (max-width: 37.49em) {
-  .button {
-    width: 100%;
-  }
-
-  .button + .button {
-    margin-top: 1em;
-  }
-}
 .input,
 .select,
 .textarea {
@@ -393,7 +371,6 @@ figcaption {
   resize: none;
   text-indent: 1px;
   text-overflow: '';
-  -webkit-transition: border 0.3s ease;
   transition: border 0.3s ease;
   margin: 0;
   width: 100%;
@@ -512,87 +489,67 @@ th {
   width: 3rem;
 }
 
-.page-header {
-  background: #2d2d2d;
-  position: relative;
-}
-
-.page-header__inner {
-  padding-top: 1rem;
-  position: relative;
-}
-.page-header__inner:before, .page-header__inner:after {
-  content: "";
-  display: table;
-}
-.page-header__inner:after {
-  clear: both;
-}
-
-.page-header .logo {
-  float: left;
-  margin: 1rem;
-}
-
-.nav--main .nav__list {
-  padding: 1rem 0;
+.nav--main {
+  background-color: #2d2d2d;
 }
 
 .nav--main .nav__link {
-  color: white;
   display: block;
-  padding: 1rem 0;
+  padding: 1rem 2rem;
 }
 .nav--main .nav__link:hover, .nav--main .nav__link:focus {
   color: #f05d71;
+}
+
+.nav__list {
+  list-style: none;
+}
+
+.nav__item {
+  margin: 0;
 }
 
 .no-js .toggle--nav--main {
   display: none;
 }
 
-.js .page-header {
-  -webkit-transition: -webkit-transform 0.3s ease;
-  transition: transform 0.3s ease;
-  width: 100%;
-}
-.js .page-header__inner {
-  padding-bottom: 1rem;
-  z-index: 1;
-}
-.js .toggle--nav--main {
-  float: right;
+.js .wrap--outer {
+  overflow-x: hidden;
 }
 .js .nav--main {
-  background: #2d2d2d;
-  left: 0;
-  opacity: 0;
-  position: absolute;
-  -webkit-transform: translateY(-2rem);
-  transform: translateY(-2rem);
-  -webkit-transition: -webkit-transform 0.3s ease, opacity 0.3s ease, visibility 0.3s ease;
-  transition: transform 0.3s ease, opacity 0.3s ease, visibility 0.3s ease;
-  visibility: hidden;
-  width: 100%;
-}
-.js.nav--main--open .nav--main {
-  opacity: 1;
-  -webkit-transform: translateY(0);
-  transform: translateY(0);
-  visibility: visible;
-}
-.js .nav--main .nav__link {
-  padding: 1rem 2rem;
-}
-.js.nav--detached .page-header {
+  width: 28rem;
+  height: 100%;
+  z-index: 1;
   position: fixed;
-  top: 0;
-  z-index: 10;
+  left: 0;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+  transition: -webkit-transform 0.3s ease, opacity 0.3s ease, visibility 0.3s ease;
+  transition: transform 0.3s ease, opacity 0.3s ease, visibility 0.3s ease;
+  -webkit-transform: translate(-100%, 0);
+  transform: translate(-100%, 0);
+  -webkit-transform: translate3d(-100%, 0, 0);
+  transform: translate3d(-100%, 0, 0);
+  opacity: 0;
+  visibility: hidden;
 }
-.js.nav--hidden .page-header {
-  -webkit-transform: translateY(-7rem);
-  transform: translateY(-7rem);
+.js.csstransforms.nav--main-open .nav--main {
+  opacity: 1;
+  visibility: visible;
+  -webkit-transform: translate(0, 0);
+  transform: translate(0, 0);
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
 }
+.js.csstransforms3d .wrap--page {
+  transition: -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease;
+}
+.js.csstransforms3d.nav--main-open .wrap--page {
+  -webkit-transform: translate3d(28rem, 0, 0);
+  transform: translate3d(28rem, 0, 0);
+}
+
 .page-footer {
   background: #2d2d2d;
   color: white;
@@ -648,56 +605,6 @@ th {
   clear: both;
 }
 
-@media only screen and (min-width: 37.5em) {
-  .section-padding--lr {
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
-
-  .page-header__inner {
-    float: left;
-    padding: 1rem 0;
-  }
-
-  .nav--main {
-    float: right;
-  }
-
-  .nav--main .nav__list {
-    padding: 0;
-  }
-
-  .nav--main .nav__item {
-    display: inline-block;
-  }
-  .nav--main .nav__item:last-child .main-nav__link {
-    padding-right: 0;
-  }
-
-  .nav--main .nav__link {
-    padding: 2rem 1.5rem;
-  }
-
-  .js .toggle--nav--main {
-    display: none;
-  }
-  .js .nav--main {
-    float: right;
-    opacity: 1;
-    position: static;
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-    visibility: visible;
-    width: auto;
-  }
-  .js .nav--main .nav__link {
-    padding: 2rem 1.5rem;
-  }
-
-  .foo {
-    color: #f00;
-  }
-}
 @media only screen and (min-width: 50em) {
   body,
   input,
@@ -706,7 +613,6 @@ th {
   button {
     font-size: 2.2rem;
   }
-
   .tera {
     font-size: 11.1375rem;
     font-weight: bold;
@@ -757,7 +663,6 @@ th {
   .intro {
     font-size: 3.3rem;
   }
-
   .section-padding--tb {
     padding-bottom: 6rem;
     padding-top: 6rem;
@@ -767,11 +672,9 @@ th {
     padding-left: 4rem;
     padding-right: 4rem;
   }
-
   .wrap__image {
     margin: 8rem 0;
   }
-
   .input + .input {
     margin-top: 0;
   }
@@ -782,7 +685,24 @@ th {
     width: 47.91667%;
     margin: 0 1.04167%;
   }
+  .foo {
+    color: #f00;
+  }
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
+  p {
+    letter-spacing: 0.01em;
+    /* Increase letter-spacing on high pixel density screens as they can appear too close */
+    word-spacing: 0.01em;
+    /* Word-spacing same as letter-spacing for consistency */
+  }
+}
 
+@media only screen and (min-width: 37.5em) {
+  .section-padding--lr {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
   .foo {
     color: #f00;
   }
@@ -792,7 +712,6 @@ th {
     padding-bottom: 8rem;
     padding-top: 8rem;
   }
-
   .two-col .main-content {
     display: inline;
     float: left;
@@ -817,20 +736,6 @@ th {
     position: fixed;
     top: 0;
   }
-
-  .foo {
-    color: #f00;
-  }
-}
-@media only screen and (min-width: 80em) {
-  .two-col .side-content {
-    display: inline;
-    float: left;
-    width: 22.91667%;
-    margin: 0 1.04167%;
-    margin-left: 9.375%;
-  }
-
   .foo {
     color: #f00;
   }
@@ -845,7 +750,6 @@ th {
   /*.wrap__image--alt + p {
   	margin-top: 1.5em;
   }*/
-
   figcaption {
     color: #787878;
     line-height: 1.3;
@@ -856,7 +760,28 @@ th {
     left: -18rem;
     width: 15rem;
   }
+  .foo {
+    color: #f00;
+  }
+}
 
+@media only screen and (max-width: 37.49em) {
+  .button {
+    width: 100%;
+  }
+
+  .button + .button {
+    margin-top: 1em;
+  }
+}
+@media only screen and (min-width: 80em) {
+  .two-col .side-content {
+    display: inline;
+    float: left;
+    width: 22.91667%;
+    margin: 0 1.04167%;
+    margin-left: 9.375%;
+  }
   .foo {
     color: #f00;
   }
