--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -38,6 +38,7 @@ Boilerplate version: 1.0
 
 // ========================================================= //
 
+@import "modules/header.scss";
 //@import "modules/nav.scss";
 @import "modules/nav-push.scss";
 @import "modules/footer.scss";
