--- a/assets/css/dev/style.css
+++ b/assets/css/dev/style.css
@@ -48,12 +48,10 @@ footer, header, hgroup, menu, nav, section {
 }
 
 .preload * {
-  -webkit-transition: none !important;
   transition: none !important;
 }
 
 * {
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   outline: none;
 }
@@ -125,68 +123,81 @@ em {
 ::-moz-selection {
   background: #57b275;
 }
-@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
-  p {
-    letter-spacing: 0.01em;
-    /* Increase letter-spacing on high pixel density screens as they can appear too close */
-    word-spacing: 0.01em;
-    /* Word-spacing same as letter-spacing for consistency */
-  }
-}
 .tera {
-  font-size: 6.94614rem;
+  font-size: 9.4596rem;
   font-weight: bold;
   line-height: 1.1;
-  padding-bottom: 3.47307rem;
+  padding-bottom: 4.7298rem;
+}
+
+.giga {
+  font-size: 7.883rem;
+  font-weight: bold;
+  line-height: 1.1;
+  padding-bottom: 3.9415rem;
+}
+
+.mega {
+  font-size: 6.56916rem;
+  font-weight: bold;
+  line-height: 1.1;
+  padding-bottom: 3.28458rem;
 }
 
 h1,
-.giga {
-  font-size: 5.2109rem;
+.alpha {
+  font-size: 5.4743rem;
   font-weight: bold;
   line-height: 1.1;
-  padding-bottom: 2.60545rem;
+  padding-bottom: 2.73715rem;
 }
 
 h2,
-.mega {
-  font-size: 3.90916rem;
+.beta {
+  font-size: 4.56192rem;
   font-weight: bold;
   line-height: 1.1;
-  padding-bottom: 1.95458rem;
+  padding-bottom: 2.28096rem;
 }
 
 h3,
-.alpha {
-  font-size: 2.9326rem;
+.gamma {
+  font-size: 3.8016rem;
   font-weight: bold;
   line-height: 1.1;
-  padding-bottom: 1.4663rem;
+  padding-bottom: 1.9008rem;
 }
 
 h4,
-.beta {
+.delta {
+  font-size: 3.168rem;
+  font-weight: bold;
+  line-height: 1.1;
+  padding-bottom: 1.584rem;
+}
+
+h5,
+.epsilon {
+  font-size: 2.64rem;
+  font-weight: bold;
+  line-height: 1.1;
+  padding-bottom: 1.32rem;
+}
+
+h6,
+.zeta {
   font-size: 2.2rem;
   font-weight: bold;
   line-height: 1.1;
   padding-bottom: 1.1rem;
 }
 
-h5,
-.gamma {
-  font-size: 1.65041rem;
-  font-weight: bold;
-  line-height: 1.1;
-  padding-bottom: 0.82521rem;
-}
-
-.intro {
-  font-size: 2.9326rem;
-  line-height: 1.4em;
+small,
+.small {
+  font-size: small;
 }
 a {
   color: #57b275;
-  -webkit-transition: color 0.3s ease;
   transition: color 0.3s ease;
 }
 a:hover {
@@ -350,7 +361,6 @@ figcaption {
   display: inline-block;
   line-height: 1;
   padding: 2rem 3rem;
-  -webkit-transition: background 0.3s ease, border 0.3s ease, color 0.3s ease;
   transition: background 0.3s ease, border 0.3s ease, color 0.3s ease;
 }
 
@@ -374,16 +384,6 @@ figcaption {
   border-color: #f05d71;
   color: white;
 }
-
-@media only screen and (max-width: 37.49em) {
-  .button {
-    width: 100%;
-  }
-
-  .button + .button {
-    margin-top: 1em;
-  }
-}
 .input,
 .select,
 .textarea {
@@ -393,7 +393,6 @@ figcaption {
   resize: none;
   text-indent: 1px;
   text-overflow: '';
-  -webkit-transition: border 0.3s ease;
   transition: border 0.3s ease;
   margin: 0;
   width: 100%;
@@ -583,7 +582,7 @@ body,
   transform: translate3d(-100%, 0, 0);
 }
 .js.touch.csstransforms.no-csstransforms3d .nav--main {
-  -webkit-transition: -webkit-transform 0.3s ease, opacity 0.3s ease, visibility 0.3s ease;
+  transition: -webkit-transform 0.3s ease, opacity 0.3s ease, visibility 0.3s ease;
   transition: transform 0.3s ease, opacity 0.3s ease, visibility 0.3s ease;
 }
 .js.touch.csstransforms.no-csstransforms3d.nav--main--open .nav--main {
@@ -594,7 +593,7 @@ body,
   left: 0 !important;
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
-  -webkit-transition: -webkit-transform 0.3s ease;
+  transition: -webkit-transform 0.3s ease;
   transition: transform 0.3s ease;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
@@ -658,12 +657,127 @@ body,
   clear: both;
 }
 
+@media only screen and (min-width: 50em) {
+  body,
+  input,
+  textarea,
+  select,
+  button {
+    font-size: 2.2rem;
+  }
+  .tera {
+    font-size: 9.4596rem;
+    font-weight: bold;
+    line-height: 1.1;
+    padding-bottom: 4.7298rem;
+  }
+
+  .giga {
+    font-size: 7.883rem;
+    font-weight: bold;
+    line-height: 1.1;
+    padding-bottom: 3.9415rem;
+  }
+
+  .mega {
+    font-size: 6.56916rem;
+    font-weight: bold;
+    line-height: 1.1;
+    padding-bottom: 3.28458rem;
+  }
+
+  h1,
+  .alpha {
+    font-size: 5.4743rem;
+    font-weight: bold;
+    line-height: 1.1;
+    padding-bottom: 2.73715rem;
+  }
+
+  h2,
+  .beta {
+    font-size: 4.56192rem;
+    font-weight: bold;
+    line-height: 1.1;
+    padding-bottom: 2.28096rem;
+  }
+
+  h3,
+  .gamma {
+    font-size: 3.8016rem;
+    font-weight: bold;
+    line-height: 1.1;
+    padding-bottom: 1.9008rem;
+  }
+
+  h4,
+  .delta {
+    font-size: 3.168rem;
+    font-weight: bold;
+    line-height: 1.1;
+    padding-bottom: 1.584rem;
+  }
+
+  h5,
+  .epsilon {
+    font-size: 2.64rem;
+    font-weight: bold;
+    line-height: 1.1;
+    padding-bottom: 1.32rem;
+  }
+
+  h6,
+  .zeta {
+    font-size: 2.2rem;
+    font-weight: bold;
+    line-height: 1.1;
+    padding-bottom: 1.1rem;
+  }
+
+  small,
+  .small {
+    font-size: small;
+  }
+  .section-padding--tb {
+    padding-bottom: 6rem;
+    padding-top: 6rem;
+  }
+
+  .section-padding--lr {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+  .wrap__image {
+    margin: 8rem 0;
+  }
+  .input + .input {
+    margin-top: 0;
+  }
+
+  .input--half {
+    display: inline;
+    float: left;
+    width: 47.91667%;
+    margin: 0 1.04167%;
+  }
+  .foo {
+    color: #f00;
+  }
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
+  p {
+    letter-spacing: 0.01em;
+    /* Increase letter-spacing on high pixel density screens as they can appear too close */
+    word-spacing: 0.01em;
+    /* Word-spacing same as letter-spacing for consistency */
+  }
+}
+
 @media only screen and (min-width: 37.5em) {
   .section-padding--lr {
     padding-left: 2rem;
     padding-right: 2rem;
   }
-
   .no-touch .nav--main {
     margin: 0px auto;
     z-index: 1;
@@ -689,96 +803,6 @@ body,
   .no-touch .toggle--nav--main {
     display: none;
   }
-
-  .foo {
-    color: #f00;
-  }
-}
-@media only screen and (min-width: 50em) {
-  body,
-  input,
-  textarea,
-  select,
-  button {
-    font-size: 2.2rem;
-  }
-
-  .tera {
-    font-size: 11.1375rem;
-    font-weight: bold;
-    line-height: 1.1;
-    padding-bottom: 5.56875rem;
-  }
-
-  h1,
-  .giga {
-    font-size: 7.425rem;
-    font-weight: bold;
-    line-height: 1.1;
-    padding-bottom: 3.7125rem;
-  }
-
-  h2,
-  .mega {
-    font-size: 4.95rem;
-    font-weight: bold;
-    line-height: 1.1;
-    padding-bottom: 2.475rem;
-  }
-
-  h3,
-  .alpha {
-    font-size: 3.3rem;
-    font-weight: bold;
-    line-height: 1.1;
-    padding-bottom: 1.65rem;
-  }
-
-  h4,
-  .beta {
-    font-size: 2.2rem;
-    font-weight: bold;
-    line-height: 1.1;
-    padding-bottom: 1.1rem;
-  }
-
-  h5,
-  .gamma {
-    font-size: 1.46667rem;
-    font-weight: bold;
-    line-height: 1.1;
-    padding-bottom: 0.73333rem;
-  }
-
-  .intro {
-    font-size: 3.3rem;
-  }
-
-  .section-padding--tb {
-    padding-bottom: 6rem;
-    padding-top: 6rem;
-  }
-
-  .section-padding--lr {
-    padding-left: 4rem;
-    padding-right: 4rem;
-  }
-
-  .wrap__image {
-    margin: 8rem 0;
-  }
-
-  .input + .input {
-    margin-top: 0;
-  }
-
-  .input--half {
-    display: inline;
-    float: left;
-    width: 47.91667%;
-    margin: 0 1.04167%;
-  }
-
   .foo {
     color: #f00;
   }
@@ -788,7 +812,6 @@ body,
     padding-bottom: 8rem;
     padding-top: 8rem;
   }
-
   .two-col .main-content {
     display: inline;
     float: left;
@@ -813,20 +836,6 @@ body,
     position: fixed;
     top: 0;
   }
-
-  .foo {
-    color: #f00;
-  }
-}
-@media only screen and (min-width: 80em) {
-  .two-col .side-content {
-    display: inline;
-    float: left;
-    width: 22.91667%;
-    margin: 0 1.04167%;
-    margin-left: 9.375%;
-  }
-
   .foo {
     color: #f00;
   }
@@ -841,7 +850,6 @@ body,
   /*.wrap__image--alt + p {
   	margin-top: 1.5em;
   }*/
-
   figcaption {
     color: #787878;
     line-height: 1.3;
@@ -852,7 +860,28 @@ body,
     left: -18rem;
     width: 15rem;
   }
+  .foo {
+    color: #f00;
+  }
+}
 
+@media only screen and (max-width: 37.49em) {
+  .button {
+    width: 100%;
+  }
+
+  .button + .button {
+    margin-top: 1em;
+  }
+}
+@media only screen and (min-width: 80em) {
+  .two-col .side-content {
+    display: inline;
+    float: left;
+    width: 22.91667%;
+    margin: 0 1.04167%;
+    margin-left: 9.375%;
+  }
   .foo {
     color: #f00;
   }
