--- a/assets/sass/base/buttons.scss
+++ b/assets/sass/base/buttons.scss
@@ -8,8 +8,11 @@
 	border-radius: $border-radius--rounded;
 	display: inline-block;
 	line-height: 1;
-	padding: 2rem 3rem;
+	padding: 1rem 1.5rem;
 	transition: background $transition-speed ease, border $transition-speed ease, color $transition-speed ease;
+}
+.button--large {
+	padding: 2rem 3rem;
 }
 
 .button--primary {
@@ -26,6 +29,19 @@
 }
 
 .button--secondary {
+	border: $border-width solid $yellow-1;
+	background: $yellow-1;
+	color: $white;
+
+	&:hover,
+	&:focus {
+		background: $yellow-2;
+		border-color: $yellow-2;
+		color: $white;
+	}
+}
+
+/*.button--secondary {
 	border: $border-width solid $pri;
 	color: $pri;
 
@@ -35,7 +51,7 @@
 		border-color: $sec;
 		color: $white;
 	}
-}
+}*/
 
 @include respond-max( $mq-small ) {
 
