--- a/assets/sass/base/structure.scss
+++ b/assets/sass/base/structure.scss
@@ -5,8 +5,9 @@
 // ===========================================================
 
 body {
-	width: 100%;
 	@include clearfix;
+	background: $dark-1;
+	width: 100%;
 }
 
 .wrap,
