--- a/assets/sass/helpers/variables.scss
+++ b/assets/sass/helpers/variables.scss
@@ -21,6 +21,18 @@ $pink-2: #ED5265;
 $yellow-1: #F2D044;
 $yellow-2: #F2D044;
 
+$purple-1: #8682D7;
+$purple-2: #7A76D0;
+
+$blue-1: #07ABCA;
+$blue-2: #05A0C2;
+
+$orange-1: #F49E39;
+$orange-2: #F29231;
+
+$red-1: #EC4E50;
+$red-2: #E84345;
+
 
 $pri: $green-1;
 $pri--alt: $green-2;
@@ -41,7 +53,8 @@ $sg-nav-colour:				$dark-1;
 
 $base-colour: 				$black;
 $border-colour:				$grey-1;
-$border-width: 				0.3rem;
+$highlight-colour:			#DFE7E9;
+$border-width: 				0.2rem;
 $border-radius: 			0.4rem;
 $border-radius--rounded:	4rem;
 $transition-speed: 			0.3s;
