--- a/assets/sass/pages/home.scss
+++ b/assets/sass/pages/home.scss
@@ -4,10 +4,56 @@
 //
 // ===========================================================
 
-.planner__list {
-	list-style: none;
+.lab__tile {
+	border-radius: $border-radius;
+	color: $white;
+	padding: 4rem;
+	text-align: center;
 }
-.planner__item {
-	margin: 0;
-	@include clearfix;
+.lab__tile__wrap {
+	position: relative;
+}
+.lab__tile--small {
+	@include column(3);
+	background: $blue-1;
+	padding: 2rem;
+}
+.lab__tile--medium {
+	@include column(6);
+	background: $red-1;
+	margin-top: 20px;
+}
+.lab__tile--featured {
+	@include column(6);
+	height: 733px;
+	position: relative;
+}
+
+.lab__tile__label {
+	border-bottom: $border-width solid $white;
+	display: inline-block;
+	margin-bottom: 3rem;
+	padding-bottom: .5rem;
+}
+.lab__tile__details {
+	bottom: 0;
+	left: 0;
+	padding: 4rem;
+	position: absolute;
+}
+.lab__tile__button {
+	margin-top: 2rem;
+}
+
+.lab__tile--purple {
+	background: $purple-1;
+}
+.lab__tile--blue {
+	background: $blue-1;
+}
+.lab__tile--orange {
+	background: $orange-1;
+}
+.lab__tile--red {
+	background: $red-1;
 }
